; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_m_makewritable.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_m_makewritable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32, %struct.TYPE_2__, i64, %struct.mbuf* }
%struct.TYPE_2__ = type { i32 }

@M_COPYBACK0_PRESERVE = common dso_local global i32 0, align 4
@M_COPYBACK0_COW = common dso_local global i32 0, align 4
@M_COPYALL = common dso_local global i32 0, align 4
@M_PKTHDR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @m_makewritable(%struct.mbuf** %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.mbuf**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.mbuf** %0, %struct.mbuf*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.mbuf**, %struct.mbuf*** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @M_COPYBACK0_PRESERVE, align 4
  %14 = load i32, i32* @M_COPYBACK0_COW, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @m_copyback0(%struct.mbuf** %10, i32 %11, i32 %12, i32* null, i32 %15, i32 %16)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %9, align 4
  ret i32 %18
}

declare dso_local i32 @m_copyback0(%struct.mbuf**, i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
